--- a/style.css
+++ b/style.css
@@ -7,11 +7,24 @@ html {
 body {
   min-height: 100%;
   min-width: 100%;
-  background: linear-gradient(pink, violet);
+  /*background: linear-gradient(pink, violet);*/
 }
 
 button {
   font-size: 7px;
+}
+
+input[type="submit"], .delete {
+    color: white;
+    border: none;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    padding-left: 8px;
+    padding-right: 8px;
+}
+
+input[type="submit"] {
+    background-color: rgb(41, 55, 248);
 }
 
 #main-content {
@@ -20,18 +33,58 @@ button {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  border: 1px solid #333;
-  background: rgba(255, 255, 255, 0.3);
+  /*border: 1px solid #333;*/
+  /*background: rgba(255, 255, 255, 0.3);*/
   padding: 15px 20px 18px 18px;
   border-radius: 5px;
-  box-shadow: 2px 5px 5px #333;
+  /*box-shadow: 2px 5px 5px #333;*/
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+form input, form select {
+    margin-bottom: 10px;
 }
 
 #list {
   margin: 10px;
-  border: 1px solid #333;
+  border: 1px solid rgb(128, 126, 126);
   background: rgba(255, 255, 255, 0.75);
   padding: 15px 20px 18px 18px;
   border-radius: 5px;
-  box-shadow: 2px 5px 5px #333;
+  box-shadow: 2px 5px 5px rgb(128, 126, 126);
+}
+
+#list li {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: 15px;
+    justify-content: flex-end;
+}
+
+.priority {
+    margin-right: 5px;
+    padding: 4px;
+    border-radius: 25px;
+}
+
+#list input[type='checkbox'], #list button.delete {
+    text-decoration: none;
+}
+
+input[type='checkbox'] {
+    margin-left: 10px;
+    margin-right: 5px;
+    width: 21px;
+    height: 21px;
+}
+
+button.delete {
+    background-color: rgb(248, 41, 41);
+    text-decoration: none;
+    font-size: 13.33px;
 }
